# Squirrel-SDK

./: CMakeLists.txt  README.md
SquirrelMockEditor/: CMakeLists.txt
SquirrelMockEditor/include/: SquirrelMock.h
SquirrelMockEditor/src/: SquirrelMock.cpp
SquirrelSDK/: CMakeLists.txt
SquirrelSDK/include/: ActorNode.h  ComponentNode.h  DBManager.h  EDBTable.h  EVariableType.h  IVariable.h  Map.h  MapStore.h  SquirrelSDK.h  VariableNode.h
SquirrelSDK/src/: ActorNode.cpp  ComponentNode.cpp  DBManager.cpp  Map.cpp  MapStore.cpp  SquirrelSDK.cpp  VariableNode.cpp
test/: ActorNodeTest.cpp  CMakeLists.txt  VariableNodeTest.cpp  fatihTestt.cpp  melisaTestt.cpp
test/Unit_Test/: UT_ActorNode.cpp  UT_ComponentNode.cpp  UT_DBManager.cpp  UT_VariableNode.cpp
test/res/: assetDB.db3
